Ajouter :  middlaware check role du utilisatear et authentification

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,4 @@
-PORT= 3000
+PORT=3000
+MONGO_URI=mongodb://localhost:27017/cinemaDbFullStack
+USER_EMAIL=mohmmedlaeh81@gmail.com
+PASSWORD_EMAIL=yiqzdaamfrjmaynu
