Ajouter : creation des films avec les image  les vedio pas encore

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,6 @@ MONGO_URI=mongodb://localhost:27017/cinemaDbFullStack
 USER_EMAIL=mohmmedlaeh81@gmail.com
 EMAIL_PASS=chtlxuywajxcwtdi
 JWT_SECRET=KibutsujiMuzanSecrets
+
+MINIO_ACCESS_KEY=gt2WSXvYkyTSBCXENQu6
+MINIO_SECRET_KEY=B82tBlo5jmHe8CAloE1grWTC9ENW5NhYvBcaJvgg
