--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,7 +18,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "sweetalert2": "^11.14.3"
+    "sweetalert2": "^11.14.3",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
