--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "sweetalert2": "^11.14.3",
     "swiper": "^11.1.14"
   },
